--- a/config/php/xdebug.ini
+++ b/config/php/xdebug.ini
@@ -3,3 +3,4 @@ zend_extension = xdebug.so
 xdebug.idekey = "PHPSTORM"
 xdebug.remote_enable = 1
 xdebug.connect_back = 1
+xdebug.remote_host = 192.168.65.1
